developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Backup_Sub_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Backup_Sub_Process_Id__c</fullName>
    <label>Backup Sub Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>