developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Execution_Order__c</fullName>
    <description>Sequence Number</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>