developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Next_Process_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Next_Process_Step_Id__c</fullName>
    <description>Unconditional Next Step - used only by Process Step of type Go To</description>
    <label>Next Process Step Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>