developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Process_Module_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Process_Module_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Module</label>
    <referenceTo>OJ_PM__Process_Module__c</referenceTo>
    <relationshipLabel>Process Steps</relationshipLabel>
    <relationshipName>Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>