developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Redirect_URL_Name__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Redirect_URL_Name__c</fullName>
    <label>Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>