developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Result_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Result_Field_API_Name__c</fullName>
    <description>The name of the field on the master object where the result of the Process Step is recorded</description>
    <label>Result Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>