developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__String_Value__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__String_Value__c</fullName>
    <label>String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>