developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Sub_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Sub_Process_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Process</label>
    <referenceTo>OJ_PM__Business_Process__c</referenceTo>
    <relationshipLabel>Process Steps (Sub-Process)</relationshipLabel>
    <relationshipName>Process_Steps2</relationshipName>
    <type>Lookup</type>
</CustomField>