developerProject/force-app/main/default/objects/OJ_PM__Process_Step__c/fields/OJ_PM__Type__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Page Redirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>